--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,22 +6,25 @@
 
 
 
-    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="12" android:targetSdkVersion="17"/>
 
     <permission android:name="com.example.Journeys.MAPS_RECEIVE" android:protectionLevel="signature"/>
 
     <uses-permission android:name="com.example.Journeys.MAPS_RECIEVE"/>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="com.google.android.provierds.gsf.permission.READ_GSERVICES"/>
 
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <uses-feature
             android:glEsVersion="0x00020000"
+            android:required="true"/>
+    <uses-feature
+            android:name="android.hardware.camera"
             android:required="true"/>
 
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
